--- a/page_16.html
+++ b/page_16.html
@@ -30,15 +30,15 @@ a:active {
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_14.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_14.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_1.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_1.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_15.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_15.png" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_7.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_7.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_6.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_6.jpg" style="max-width:100%;" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_10.jpg" style="max-width:100%;" /></a>
 <br>
