--- a/page_16.html
+++ b/page_16.html
@@ -40,15 +40,15 @@ a:active {
 <br>
 <img src="./Appendix_Links/Photo/photo_appendix_6.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_10.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_10.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_9.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_9.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_16.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_16.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_17.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_17.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_2.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_2.jpg" style="max-width:100%;" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_4.jpg" style="max-width:100%;" /></a>
 <br>
