--- a/page_16.html
+++ b/page_16.html
@@ -50,15 +50,15 @@ a:active {
 <br>
 <img src="./Appendix_Links/Photo/photo_appendix_2.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_4.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_4.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_5.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_5.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_8.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_8.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_11.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_11.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_3.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_3.jpg" style="max-width:100%;" /></a>
 <br>
 <img src="/Users/mattmiller/Documents/Test_Site/Appendix_Links/Photo/photo_appendix_13.jpg" style="max-width:100%;" /></a>
 <br>
