--- a/page_1.html
+++ b/page_1.html
@@ -82,5 +82,5 @@ a:active {
 <img src="./Links/Origin_Story/mars_oak_advertising_4.jpg" style="max-width:100%" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="./collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
