--- a/page_2.html
+++ b/page_2.html
@@ -37,7 +37,7 @@ a:active {
 <br>
 <img src="./Links/Creed/oak_creed_3.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="./Links/Creed/oak_creed_4.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_4.jpeg" style="max-width:100%;" /></a>
 <br>
 <img src="./Links/Creed/oak_creed_5.jpg" style="max-width:100%;" /></a>
 <br>
@@ -45,7 +45,7 @@ a:active {
 <br>
 <img src="./Links/Creed/oak_creed_7.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="./Links/Creed/oak_creed_8.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_8.jpeg" style="max-width:100%;" /></a>
 <br>
 <img src="./Links/Creed/oak_creed_9.png" style="max-width:100%;" /></a>
 <br>
@@ -61,5 +61,5 @@ a:active {
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
 
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
