--- a/page_3.html
+++ b/page_3.html
@@ -40,5 +40,5 @@ a:active {
 <img src="./Links/Leaders/oak_maxfearlight_5.jpg" style="max-width:100%;" /></a>
 <br>
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.html">Back</a>
+<a href="./collapse-list.html">Back</a>
 </p>
