--- a/page_6.html
+++ b/page_6.html
@@ -63,7 +63,7 @@ a:active {
 <br>
 <img src="./Links/Temples/temples_oak_17.jpg" style="max-width:100%" /></a>
 <br>
-<img src="./Temples/temples_oak_18.jpg" style="max-width:100%" /></a>
+<img src="./Links/Temples/temples_oak_18.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Temples/temples_oak_20.jpg" style="max-width:100%" /></a>
 <br>
