--- a/page_7.html
+++ b/page_7.html
@@ -89,7 +89,7 @@ a:active {
 <br>
 <img src="./Links/Rituals/rituals_oak_30.jpg" style="max-width:100%" /></a>
 <br>
-<img src=./Links/Rituals/rituals_oak_31.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_31.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Rituals/rituals_oak_32.png" style="max-width:100%" /></a>
 <br>
