--- a/page_13.html
+++ b/page_13.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <!-- (A) LOAD CSS & JS -->
+    <link rel="stylesheet" href="./collapse-list.css">
 <style>
 a:link {
   color: #000000;
