--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@ a:active {
 <p style="text-align: center;">
 <a href="collapse-list.html" class="center">- Enter Site -</a></p>
 <br>
-<p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;"><em>All Rights Reserved | Site Last Updated: October 2023 | <a href="https://twitter.com/oakley?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Follow Us on Twitter (Formerly X)</a> | <a href="https://www.freecounterstat.com" title="visitor counters"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=chk22fjas4hydd8qnrsrwzxgrt63qdxg" border="0" title="visitor counters" alt="visitor counters"></a>
+<p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;"><em>All Rights Reserved | Site Last Updated: October 2023 
 </em></p>	
 </body>
