--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ form
 <!--Function to check password the already set password is admin-->
 <script type="text/javascript">
     function checkPswd() {
-        var confirmPassword = "admin";
+        var confirmPassword = "FutureGenesis2023";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
              window.location="welcome.html";
