--- a/homepage.html
+++ b/homepage.html
@@ -51,6 +51,6 @@ a:active {
 <p style="text-align: center;">
 <a href="collapse-list.html" class="center">- Enter Site -</a></p>
 <br>
-<p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;"><em>All Rights Reserved | Site Last Updated: October 2023 
+<p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;"><em>Site Last Updated: October 2023 
 </em></p>	
 </body>
