--- a/homepage.html
+++ b/homepage.html
@@ -44,9 +44,7 @@ a:active {
 <body>
 
 <body style="background-color:#FFFFFF">
-<img src="./Links/home_page_index/Homepage-FG-Logo.png" alt="homepage_0" class="center">
-<br>
-<img src="./Links/home_page_index/Homepage-Image.png" alt="homepage_1" class="center">
+<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" class="center">
 <br>
 <p style="text-align: center;">
 <a href="collapse-list.html" class="center">- Enter Site -</a></p>
