--- a/welcome.html
+++ b/welcome.html
@@ -37,6 +37,6 @@ img {
 
 </head>
 <body>
-<a href="./homepage.html"><p style="text-align:center">Proceed to Oakley Digital Asset Library</p></a>
+<a href="./homepage.html"><p style="text-align:center">Proceed to Future Genesis Digital Flat File</p></a>
 </body>
 </html>
