--- a/homepage.html
+++ b/homepage.html
@@ -5,32 +5,21 @@
 <title> Future Genesis Asset Archive </title>
 
 <!-- (A) LOAD CSS & JS -->
-    <link rel="stylesheet" href="/Users/mattmiller/Documents/Test_Site/collapse-list-html/collapse-list.css">
+    <link rel="stylesheet" href="./collapse-list.css">
 
 <style>
 
-a:link {
-  color: #000000;
-  background-color: transparent;
+a {
+  background-color: #000000;
+  color: #eee;
+  padding: 15px 25px;
   text-decoration: none;
-  font-family: Courier;
-}
-a:visited {
-  color: #000000;
-  background-color: transparent;
-  text-decoration: none;
-}
-a:hover {
-  color: blue;
-  background-color: transparent;
-  text-decoration: underline;
-}
-a:active {
-  color: blue;
-  background-color: transparent;
-  text-decoration: underline;
 }
 
+a: hover {
+  background-color: #ffffff;
+}
+    
 .center {
   display: block;
   margin-left: auto;
