--- a/homepage.html
+++ b/homepage.html
@@ -24,7 +24,7 @@ a: hover {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;/Users/mattmiller/Documents/Test_Site/index.html
+  width: 40%;
   text-align: center; 
 }
 
