--- a/homepage.html
+++ b/homepage.html
@@ -33,7 +33,8 @@ a: hover {
 <body>
 
 <body style="background-color:#FFFFFF">
-<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" class="center">
+<div style="max-width:800px">
+<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" class="center" "max-width:100%">
 <br>
 <p style="text-align: center;">
 <a href="collapse-list.html" class="center">- Enter Site -</a></p>
