--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,7 @@ a: hover {
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:800px">
-<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" class="center" "max-width:100%">
+<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" class="center" style="max-width:100%">
 <br>
 <p style="text-align: center;">
 <a href="collapse-list.html" class="center">- Enter Site -</a></p>
