--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@ a: hover {
   background-color: #ffffff;
 }
     
-.center {
+center {
   display: block;
   margin-left: auto;
   margin-right: auto;
