--- a/homepage.html
+++ b/homepage.html
@@ -20,21 +20,20 @@ a: hover {
   background-color: #ffffff;
 }
     
-center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-  text-align: center; 
-}
+ div {
+      display: grid;
+      place-items: center;
+    }
 
 </style>
 </head>
 <body>
 
 <body style="background-color:#FFFFFF">
+<div>
 <div style="max-width:800px">
 <img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" class="center" style="max-width:100%">
+</div>
 <br>
 <p style="text-align: center;">
 <a href="collapse-list.html" class="center">- Enter Site -</a></p>
