--- a/homepage.html
+++ b/homepage.html
@@ -32,7 +32,7 @@ a: hover {
 <body style="background-color:#FFFFFF">
 <div>
 <div style="max-width:800px">
-<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" class="center" style="max-width:100%">
+<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" style="max-width:100%" />
 </div>
 <br>
 <p style="text-align: center;">
