--- a/homepage.html
+++ b/homepage.html
@@ -25,19 +25,21 @@ a: hover {
       place-items: center;
     }
 
+img{
+    width:100%;
+    max-width:600px;
+}
+    
 </style>
 </head>
 <body>
 
 <body style="background-color:#FFFFFF">
 <div>
-<div style="max-width:800px">
 <img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" style="max-width:100%" />
 </div>
 <br>
 <p style="text-align: center;">
 <a href="collapse-list.html" class="center">- Enter Site -</a></p>
-<br>
-<p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;"><em>Site Last Updated: October 2023 
-</em></p>	
+<br>	
 </body>
