--- a/homepage.html
+++ b/homepage.html
@@ -36,7 +36,7 @@ img{
 
 <body style="background-color:#FFFFFF">
 <div>
-<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" style="max-width:100%" />
+<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" />
 </div>
 <br>
 <p style="text-align: center;">
