--- a/page_5.html
+++ b/page_5.html
@@ -23,6 +23,13 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+
+  }
+
+  img {
+padding-left: 55px;
+
+}
 </style>
 
 </head>
