--- a/page_10.html
+++ b/page_10.html
@@ -23,6 +23,11 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+
+img {
+padding-left: 55px;
+
+}
 </style>
 
 </head>
