--- a/page_1.html
+++ b/page_1.html
@@ -28,10 +28,32 @@ img {
 padding-left: 55px;
 
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
 
+li {
+  float: right;
+}
+
+li a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
 </style>
 </head>
-
+<body>
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
 <img src="./Links/Origin_Story/oak_max_fearlight_3.png" style="max-width:100%;" /></a>
@@ -89,3 +111,7 @@ padding-left: 55px;
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
 <a href="./collapse-list.html">Back</a>
 </p>
+  <ul>
+  <li><a href="./collapse-list.html">Back</a></li>
+  </ul>
+</body>
