--- a/page_1.html
+++ b/page_1.html
@@ -94,5 +94,5 @@ padding-left: 55px;
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
 <a href="./collapse-list.html">Back</a>
 </p>
-  <button class='backBtn' onclick="history.back(-1)">Back </button>
+  <button class="backBtn" onclick="history.back(-1)">Back </button>
 </body>
