--- a/page_2.html
+++ b/page_2.html
@@ -70,7 +70,6 @@ padding-left: 55px;
 <br>
 <img src="./Links/Creed/oak_creed_13.png" style="max-width:100%;" /></a>
 <br>
-<p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
+<button class='backBtn' onclick="history.back(-1)">Back </button>
 
-<a href="./collapse-list.html">Back</a>
-</p>
+
