--- a/page_3.html
+++ b/page_3.html
@@ -28,6 +28,11 @@ a:active {
 padding-left: 55px;
 
 }
+  .backBtn {
+  position: fixed;
+  left: 90%;
+  top: 90%;
+}
 </style>
 
 </head>
@@ -44,6 +49,5 @@ padding-left: 55px;
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_5.jpg" style="max-width:100%;" /></a>
 <br>
-<p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="./collapse-list.html">Back</a>
+  <button class='backBtn' onclick="history.back(-1)">Back </button>
 </p>
