--- a/page_5.html
+++ b/page_5.html
@@ -26,7 +26,12 @@ a:active {
 
 img {
 padding-left: 55px;
-
+}
+  
+  .backBtn {
+  position: fixed;
+  left: 90%;
+  top: 90%;
 }
 </style>
 
@@ -68,6 +73,4 @@ padding-left: 55px;
 <br>
 <img src="./Links/icons/icons_oak_16.jpg" style="max-width:100%" /></a>
 <br>
-<p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="./collapse-list.html">Back</a>
-</p>
+  <button class='backBtn' onclick="history.back(-1)">Back </button>
