--- a/page_6.html
+++ b/page_6.html
@@ -28,6 +28,13 @@ img {
 padding-left: 55px;
 
 }
+
+  .backBtn {
+  position: fixed;
+  left: 90%;
+  top: 90%;
+}
+
 </style>
 
 </head>
@@ -72,6 +79,4 @@ padding-left: 55px;
 <br>
 <img src="./Links/Temples/temples_oak_20.jpg" style="max-width:100%" /></a>
 <br>
-<p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="./collapse-list.html">Back</a>
-</p>
+  <button class='backBtn' onclick="history.back(-1)">Back </button>
