--- a/page_10.html
+++ b/page_10.html
@@ -28,6 +28,12 @@ img {
 padding-left: 55px;
 
 }
+  .backBtn {
+  position: fixed;
+  left: 90%;
+  top: 90%;
+}
+
 </style>
 
 </head>
@@ -40,6 +46,4 @@ padding-left: 55px;
 <br>
 <img src="./Links/the_road_ahead/theroadonahead_3.jpg" style="max-width:100%" /></a>
 <br>
-<p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<a href="./collapse-list.html">Back</a>
-</p>
+  <button class='backBtn' onclick="history.back(-1)">Back </button>
