--- a/page_16.html
+++ b/page_16.html
@@ -23,7 +23,11 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
-
+.backBtn {
+  position: fixed;
+  left: 90%;
+  top: 90%;
+}
 </style>
 </head>
 <body>
@@ -64,5 +68,4 @@ a:active {
 <br>
 <img src="./Appendix_Links/Photo/photo_appendix_12.jpg" style="max-width:100%;" /></a>
 <br>
-<a href="./collapse-list.html">Back</a>
-</p>
+  <button class='backBtn' onclick="history.back(-1)">Back </button>
