--- a/page_16.html
+++ b/page_16.html
@@ -23,6 +23,10 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+
+  img {
+padding-left: 55px;
+  }
 .backBtn {
   position: fixed;
   left: 90%;
