--- a/page_1.html
+++ b/page_1.html
@@ -29,6 +29,8 @@ padding-left: 55px;
 
 }
   .backBtn {
+  background-color: black; 
+  color: white; 
   position: fixed;
   left: 90%;
   top: 90%;
@@ -94,5 +96,5 @@ padding-left: 55px;
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
 <a href="./collapse-list.html">Back</a>
 </p>
-  <button class='backBtn' onclick="history.back(-1)">Back </button>
+  <button class='backBtn' onclick="history.back(-1)"><--Back </button>
 </body>
