--- a/page_2.html
+++ b/page_2.html
@@ -30,6 +30,8 @@ padding-left: 55px;
 }
  
   .backBtn {
+  background-color: black; 
+  color: white; 
   position: fixed;
   left: 90%;
   top: 90%;
@@ -70,6 +72,6 @@ padding-left: 55px;
 <br>
 <img src="./Links/Creed/oak_creed_13.png" style="max-width:100%;" /></a>
 <br>
-<button class='backBtn' onclick="history.back(-1)">Back </button>
+<button class='backBtn' onclick="history.back(-1)"><--Back </button>
 
 
