--- a/page_3.html
+++ b/page_3.html
@@ -29,6 +29,8 @@ padding-left: 55px;
 
 }
   .backBtn {
+  background-color: black; 
+  color: white;   
   position: fixed;
   left: 90%;
   top: 90%;
@@ -49,5 +51,5 @@ padding-left: 55px;
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_5.jpg" style="max-width:100%;" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)">Back </button>
+  <button class='backBtn' onclick="history.back(-1)"><--Back </button>
 </p>
