--- a/page_6.html
+++ b/page_6.html
@@ -30,6 +30,8 @@ padding-left: 55px;
 }
 
   .backBtn {
+  background-color: black; 
+  color: white; 
   position: fixed;
   left: 90%;
   top: 90%;
