--- a/page_9.html
+++ b/page_9.html
@@ -29,6 +29,8 @@ padding-left: 55px;
 
 }
   .backBtn {
+  background-color: black; 
+  color: white; 
   position: fixed;
   left: 90%;
   top: 90%;
@@ -43,4 +45,4 @@ padding-left: 55px;
 <br>
 <img src="./Links/non_believers/non_believers_2.jpg" style="max-width:100%" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)">Back </button>
+  <button class='backBtn' onclick="history.back(-1)"><--Back </button>
