--- a/page_1.html
+++ b/page_1.html
@@ -41,7 +41,7 @@ padding-left: 55px;
 <body>
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
-<img style="padding:55px" src="./Links/Origin_Story/oak_max_fearlight_3.png" style="max-width:100%;" /></a>
+<img src="./Links/Origin_Story/oak_max_fearlight_3.png" style="max-width:100%; padding:55px;" /></a>
 <br>
 <img src="./Links/Origin_Story/oak_max_fearlight_4.png" style="max-width:100%;" /></a>
 <br>
