--- a/page_2.html
+++ b/page_2.html
@@ -42,9 +42,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
-<img src="" style="max-width:100%;" /></a>
-<br>
-<img src="./Links/Creed/oak_creed_1.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Creed/oak_creed_1.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
 <img src="./Links/Creed/oak_creed_2.png" style="max-width:100%;" /></a>
 <br>
