--- a/page_5.html
+++ b/page_5.html
@@ -41,9 +41,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
-<img src="" /></a>
-<br>
-<img src="./Links/icons/icons_oak_1.png" style="max-width:100%" /></a>
+<img src="./Links/icons/icons_oak_1.png" style="max-width:100%; padding:55px 0px 0px 55px" /></a>
 <br>
 <img src="./Links/icons/icons_oak_2.jpg" style="max-width:100%" /></a>
 <br>
