--- a/page_8.html
+++ b/page_8.html
@@ -43,7 +43,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px" />
-<img src="./Links/Lexicon/lexicon_oak_25.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_25.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
 <img src="./Links/Lexicon/lexicon_oak_1.png" style="max-width:100%" /></a>
 <br>
