--- a/page_9.html
+++ b/page_9.html
@@ -41,7 +41,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px" />
-<img src="./Links/non_believers/non_believers_1.png" style="max-width:100%" /></a>
+<img src="./Links/non_believers/non_believers_1.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
 <img src="./Links/non_believers/non_believers_2.jpg" style="max-width:100%" /></a>
 <br>
