--- a/page_14.html
+++ b/page_14.html
@@ -41,7 +41,7 @@ padding-left: 55px;
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<img src="./Appendix_Links/Technology/technology_appendix_15.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_15.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
 <img src="./Appendix_Links/Technology/technology_appendix_5.jpg" style="max-width:100%;" /></a>
 <br>
