--- a/page_16.html
+++ b/page_16.html
@@ -40,7 +40,7 @@ padding-left: 55px;
 <body style="background-color:#FFFFFF">
 <div style="max-width:500px">
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<img src="./Appendix_Links/Photo/photo_appendix_14.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Photo/photo_appendix_14.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
 <img src="./Appendix_Links/Photo/photo_appendix_1.png" style="max-width:100%;" /></a>
 <br>
