--- a/homepage.html
+++ b/homepage.html
@@ -47,13 +47,8 @@ img{
     <br>
 <body style="background-color:#FFFFFF">
 <div>
-<img src="./Links/home_page_index/Home-Page_image_V2.jpg" alt="Future_Genesis" />
+<img src="./Links/home_page_index/Home-Page_image_V2.jpg" style="padding:0px 0px  75px 0px;" />
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
 <p style="text-align: center;">
 <a href="collapse-list.html" class="center">- Enter Site -</a></p>
 <br>	
