--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./collapse-list.css">
 
 <style>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
 a {
   background-color: #000000;
   color: #eee;
