--- a/page_1.html
+++ b/page_1.html
@@ -29,8 +29,8 @@ padding-left: 55px;
 
 }
   .backBtn {
-  background-color: black; 
-  color: white; 
+  background-color: white; 
+  color: black; 
   position: fixed;
   left: 90%;
   top: 90%;
@@ -93,5 +93,5 @@ padding-left: 55px;
 <br>
 <img src="./Links/Origin_Story/mars_oak_advertising_4.jpg" style="max-width:100%" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)"><--Back </button>
+  <button class='backBtn' onclick="history.back(-1)">< Back </button>
 </body>
