--- a/page_4.html
+++ b/page_4.html
@@ -29,8 +29,8 @@ padding-left: 55px;
 
 }
   .backBtn {
-  background-color: black; 
-  color: white; 
+  background-color: white; 
+  color: black; 
   position: fixed;
   left: 90%;
   top: 90%;
