--- a/page_4.html
+++ b/page_4.html
@@ -51,4 +51,4 @@ padding-left: 55px;
 <br>
 <img src="./Links/Leaders/maxine_oak_5.jpg" style="max-width:100%" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)"><--Back </button>
+  <button class='backBtn' onclick="history.back(-1)">< Back </button>
