--- a/page_5.html
+++ b/page_5.html
@@ -29,8 +29,8 @@ padding-left: 55px;
 }
   
   .backBtn {
-  background-color: black; 
-  color: white; 
+  background-color: white; 
+  color: black; 
   position: fixed;
   left: 90%;
   top: 90%;
@@ -73,4 +73,4 @@ padding-left: 55px;
 <br>
 <img src="./Links/icons/icons_oak_16.jpg" style="max-width:100%" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)"><--Back </button>
+  <button class='backBtn' onclick="history.back(-1)">< Back </button>
