--- a/page_6.html
+++ b/page_6.html
@@ -30,8 +30,8 @@ padding-left: 55px;
 }
 
   .backBtn {
-  background-color: black; 
-  color: white; 
+  background-color: white; 
+  color: black; 
   position: fixed;
   left: 90%;
   top: 90%;
@@ -81,4 +81,4 @@ padding-left: 55px;
 <br>
 <img src="./Links/Temples/temples_oak_20.jpg" style="max-width:100%" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)">Back </button>
+  <button class='backBtn' onclick="history.back(-1)">< Back </button>
