--- a/homepage.html
+++ b/homepage.html
@@ -39,6 +39,8 @@ img{
 <img src="./Links/home_page_index/Home-Page_image_V2.jpg" style="padding:100px 0px  75px 0px;" />
 </div>
 <p style="text-align: center;">
+<div>
 <a href="collapse-list.html" class="center">- Enter Site -</a></p>
+    </div>
 <br>	
 </body>
