--- a/page_1.html
+++ b/page_1.html
@@ -63,7 +63,7 @@ padding-left: 55px;
 <br>
 <img src="./Links/Origin_Story/oak_architecture_4.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="./Links/Origin_Story/machinery_oak_1.png" style="max-width:100%" /></a>
+<img src="./Links/Origin_Story/machinery_oak_1.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Origin_Story/machinery_oak_2.jpg" style="max-width:100%" /></a>
 <br>
