--- a/homepage.html
+++ b/homepage.html
@@ -25,6 +25,12 @@ img{
     width:100%;
     max-width:500px;
 }
+
+.btn {
+    text-decoration: none; 
+    padding: none; 
+    border: 1px solid #FFFFFF; 
+}
     
 </style>
 </head>
@@ -34,6 +40,6 @@ img{
 <img src="./Links/home_page_index/Home-Page_image_V2.jpg" style="padding:100px 0px  75px 0px;" />
 </div>
 <p style="text-align: center;">
-<a href="collapse-list.html" class="center">- Enter Site -</a></p>
+<a class="btn" href="collapse-list.html" class="center">- Enter Site -</a></p>
 <br>	
 </body>
