--- a/page_10.html
+++ b/page_10.html
@@ -29,8 +29,8 @@ padding-left: 55px;
 
 }
   .backBtn {
-  background-color: black; 
-  color: white; 
+  background-color: white; 
+  color: black; 
   position: fixed;
   left: 90%;
   top: 90%;
@@ -48,4 +48,4 @@ padding-left: 55px;
 <br>
 <img src="./Links/the_road_ahead/theroadonahead_3.jpg" style="max-width:100%" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)"><--Back </button>
+  <button class='backBtn' onclick="history.back(-1)">< Back </button>
