--- a/page_14.html
+++ b/page_14.html
@@ -28,8 +28,8 @@ img {
 padding-left: 55px;
   }
   .backBtn {
-  background-color: black; 
-  color: white; 
+  background-color: white; 
+  color: black; 
   position: fixed;
   left: 90%;
   top: 90%;
@@ -69,5 +69,5 @@ padding-left: 55px;
 <br>
 <img src="./Appendix_Links/Technology/technology_appendix_7.png" style="max-width:100%;" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)">Back </button>
+  <button class='backBtn' onclick="history.back(-1)">< Back </button>
 
