--- a/page_15.html
+++ b/page_15.html
@@ -28,7 +28,7 @@ padding-left: 55px;
 
 }
   .backBtn {
-  background-color: black; 
+  background-color: white; 
   color: white;   
   position: fixed;
   left: 90%;
@@ -64,4 +64,4 @@ padding-left: 55px;
 <br>
 <img src="./Appendix_Links/the_bunker/the_bunker_appendix_3.jpg" style="max-width:100%;" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)"><--Back </button>
+  <button class='backBtn' onclick="history.back(-1)">< Back </button>
