--- a/page_15.html
+++ b/page_15.html
@@ -29,7 +29,7 @@ padding-left: 55px;
 }
   .backBtn {
   background-color: white; 
-  color: white;   
+  color: black;   
   position: fixed;
   left: 90%;
   top: 90%;
