--- a/page_16.html
+++ b/page_16.html
@@ -28,8 +28,8 @@ a:active {
 padding-left: 55px;
   }
 .backBtn {
-  background-color: black; 
-  color: white; 
+  background-color: white; 
+  color: black; 
   position: fixed;
   left: 90%;
   top: 90%;
@@ -74,4 +74,4 @@ padding-left: 55px;
 <br>
 <img src="./Appendix_Links/Photo/photo_appendix_12.jpg" style="max-width:100%;" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)"><--Back </button>
+  <button class='backBtn' onclick="history.back(-1)">< Back </button>
