--- a/collapse-list.html
+++ b/collapse-list.html
@@ -69,7 +69,7 @@ img {
 
 <ul class="collapse">
       <li>
-        Creed
+        Creeds
         <ul>
           <li><a href="./page_2.html">Index</a></li>
 	
