--- a/page_1.html
+++ b/page_1.html
@@ -93,5 +93,15 @@ padding-left: 55px;
 <br>
 <img src="./Links/Origin_Story/SubZero_Ad.png" style="max-width:100%" /></a>
 <br>
+<img src="./Links/Origin_Story/AD_1 Gears.png" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Origin_Story/AD_1_Monitor.png" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Origin_Story/AD1_Fire.png" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Origin_Story/WT3_terje_haakonsen_pg_23.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Origin_Story/Max_Door_Image_Update.png" style="max-width:100%" /></a>
+<br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
 </body>
