--- a/page_3.html
+++ b/page_3.html
@@ -40,7 +40,7 @@ padding-left: 55px;
 </head>
 
 <body style="background-color:#FFFFFF">
-<div style="max-width:500px">
+<div style="max-width:600px">
 <img src="./Links/Leaders/oak_maxfearlight_1.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_2.jpg" style="max-width:100%;" /></a>
@@ -50,6 +50,18 @@ padding-left: 55px;
 <img src="./Links/Leaders/oak_maxfearlight_4.jpg" style="max-width:100%;" /></a>
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_5.jpg" style="max-width:100%;" /></a>
+<br>
+<img src="./Links/Leaders/oak_maxfearlight_6.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<br>
+<img src="./Links/Leaders/oak_maxfearlight_7.jpg" style="max-width:100%;" /></a>
+<br>
+<img src="./Links/Leaders/oak_maxfearlight_8.jpg" style="max-width:100%;" /></a>
+<br>
+<img src="./Links/Leaders/oak_maxfearlight_9.jpg" style="max-width:100%;" /></a>
+<br>
+<img src="./Links/Leaders/oak_maxfearlight_10.jpg" style="max-width:100%;" /></a>
+<br>
+<img src="./Links/Leaders/oak_maxfearlight_11.jpg" style="max-width:100%;" /></a>
 <br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
 </p>
