--- a/page_3.html
+++ b/page_3.html
@@ -59,7 +59,7 @@ padding-left: 55px;
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_9.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="./Links/Leaders/oak_maxfearlight_10.jpg" style="max-width:100%;" /></a>
+<img src="./Links/Leaders/oak_maxfearlight_10.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_11.jpg" style="max-width:100%;" /></a>
 <br>
