--- a/collapse-list.html
+++ b/collapse-list.html
@@ -138,7 +138,7 @@ img {
 
 <ul class="collapse">
       <li>
-        Non Believers
+        Non-Believers
         <ul>
           <li><a href="./page_9.html">Index</a></li>
             </ul>
