--- a/page_4.html
+++ b/page_4.html
@@ -47,8 +47,20 @@ padding-left: 55px;
 <br>
 <img src="./Links/Leaders/maxine_oak_3.jpg" style="max-width:100%" /></a>
 <br>
-<img src="./Links/Leaders/maxine_oak_4.png" style="max-width:100%" /></a>
+<img src="./Links/Leaders/maxine_oak_4.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Leaders/maxine_oak_5.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Leaders/maxine_oak_6.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Leaders/maxine_oak_7.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Leaders/maxine_oak_8.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Leaders/maxine_oak_9.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Leaders/maxine_oak_10.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Leaders/maxine_oak_11.jpg" style="max-width:100%" /></a>
 <br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
