--- a/page_4.html
+++ b/page_4.html
@@ -45,7 +45,7 @@ padding-left: 55px;
 <br>
 <img src="./Links/Leaders/maxine_oak_2.jpg" style="max-width:100%" /></a>
 <br>
-<img src="./Links/Leaders/maxine_oak_3.jpg" style="max-width:100%" /></a>
+<img src="./Links/Leaders/maxine_oak_3.png" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Leaders/maxine_oak_4.jpg" style="max-width:100%" /></a>
 <br>
@@ -58,8 +58,6 @@ padding-left: 55px;
 <img src="./Links/Leaders/maxine_oak_8.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Leaders/maxine_oak_9.jpg" style="max-width:100%" /></a>
-<br>
-<img src="./Links/Leaders/maxine_oak_10.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Leaders/maxine_oak_11.jpg" style="max-width:100%" /></a>
 <br>
