--- a/page_3.html
+++ b/page_3.html
@@ -51,7 +51,7 @@ padding-left: 55px;
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_5.jpg" style="max-width:100%;" /></a>
 <br>
-<img src="./Links/Leaders/oak_maxfearlight_6.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Links/Leaders/oak_maxfearlight_6.jpg" style="max-width:100%;" /></a>
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_7.jpg" style="max-width:100%;" /></a>
 <br>
