--- a/page_5.html
+++ b/page_5.html
@@ -40,7 +40,7 @@ padding-left: 55px;
 </head>
 
 <body style="background-color:#FFFFFF">
-<div style="max-width:500px">
+<div style="max-width:600px">
 <img src="./Links/icons/icons_oak_1.png" style="max-width:100%; padding:55px 0px 0px 55px" /></a>
 <br>
 <img src="./Links/icons/icons_oak_2.jpg" style="max-width:100%" /></a>
@@ -72,5 +72,17 @@ padding-left: 55px;
 <img src="./Links/icons/icons_oak_15.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/icons/icons_oak_16.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/icons/icons_oak_17.png" style="max-width:100%" /></a>
+<br>
+<img src="./Links/icons/icons_oak_18.png" style="max-width:100%" /></a>
+<br>
+<img src="./Links/icons/icons_oak_19.png" style="max-width:100%" /></a>
+<br>
+<img src="./Links/icons/icons_oak_21.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/icons/icons_oak_21.png" style="max-width:100%" /></a>
+<br>
+<img src="./Links/icons/icons_oak_22.png" style="max-width:100%" /></a>
 <br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
