--- a/page_9.html
+++ b/page_9.html
@@ -40,9 +40,11 @@ padding-left: 55px;
 </head>
 
 <body style="background-color:#FFFFFF">
-<div style="max-width:500px" />
+<div style="max-width:600px" />
 <img src="./Links/non_believers/non_believers_1.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
 <img src="./Links/non_believers/non_believers_2.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/non_believers/non_believers_3.png" style="max-width:100%" /></a>
 <br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
