--- a/collapse-list.html
+++ b/collapse-list.html
@@ -165,7 +165,7 @@ img {
           <li><a href="./page_11.html">Product</a></li>
 	  <li><a href="./page_14.html">Technology</a></li>
 	  <li><a href="./page_15.html">The Bunker</a></li>
-	  <li><a href="./page_16.html">Photography & Advertising</a></li>
+	  <li><a href="./page_16.html">Advertising</a></li>
 
             </ul>
           </li>
