--- a/page_7.html
+++ b/page_7.html
@@ -43,7 +43,7 @@ padding-left: 55px;
 <div style="max-width:600px">
 <img src="./Links/Rituals/rituals_oak_1.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
-<img src="./Links/Rituals/rituals_oak_2.jpg" style="max-width:100%" /></a>
+<img src="./Links/Rituals/rituals_oak_2.png" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Rituals/rituals_oak_3.jpg" style="max-width:100%" /></a>
 <br>
