--- a/page_12.html
+++ b/page_12.html
@@ -28,10 +28,6 @@ a:active {
   text-decoration: underline;
 }
 
-img {
-padding-left: 55px;
-
-}
     .backBtn {
   background-color: white; 
   color: black; 
@@ -44,8 +40,8 @@ padding-left: 55px;
 </head>
 
 <body style="background-color:#FFFFFF">
-<div style="padding:55px 55px 0px 55px;position:relative;"><iframe src="https://player.vimeo.com/video/873003001?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Oakley_OG Max Fearlight_Remaster_1920x1080"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+<div style="padding:26% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/873003001?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Oakley_OG Max Fearlight_Remaster_1920x1080"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 <br>
-  <div style="padding:55px 55px 0px 55px;position:relative;"><iframe src="https://player.vimeo.com/video/873778605?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Oakley_Session 1242_Remaster_1920x1080"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script> 
+  <div style="padding:26% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/873778605?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Oakley_Session 1242_Remaster_1920x1080"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script> 
 <br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
