--- a/page_13.html
+++ b/page_13.html
@@ -41,6 +41,8 @@ padding-left: 55px;
 </head>
 
 <body style="background-color:#FFFFFF">
-  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/873785308?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Oakley_FutGen_Maxine_30sec_1920x1080"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+<div style="padding:55px;">
+  <iframe src="https://player.vimeo.com/video/873785308?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="600" height="338" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Oakley - 2023 Maxine Fearlight Teaser"></iframe>
 <br>
+</div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
