--- a/page_12.html
+++ b/page_12.html
@@ -45,9 +45,9 @@ a:active {
 
 <body style="background-color:#FFFFFF">
     <div style="padding:55px;">
-    <iframe src="https://player.vimeo.com/video/873003001?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="600" height="338" frameborder="55px" allow="autoplay; fullscreen; picture-in-picture" title="Oakley - 1992 Max Fearlight Ad _01"></iframe>
+    <iframe src="https://player.vimeo.com/video/873003001?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="600" height="338" frameBorder="0" allow="autoplay; fullscreen; picture-in-picture" title="Oakley - 1992 Max Fearlight Ad _01"></iframe>
 <br>
-    <iframe src="https://player.vimeo.com/video/873778605?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="600" height="338" frameborder="55px" allow="autoplay; fullscreen; picture-in-picture" title="Oakley - 1992 Max Fearlight Ad _02"></iframe>
+    <iframe src="https://player.vimeo.com/video/873778605?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="600" height="338" frameBorder="0" allow="autoplay; fullscreen; picture-in-picture" title="Oakley - 1992 Max Fearlight Ad _02"></iframe>
 <br>
     </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
