--- a/page_13.html
+++ b/page_13.html
@@ -42,7 +42,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="padding:55px;">
-  <iframe src="https://player.vimeo.com/video/873785308?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="600" height="338" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Oakley - 2023 Maxine Fearlight Teaser"></iframe>
+  <iframe src="https://player.vimeo.com/video/873785308?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="600" height="338" frameBorder="0" allow="autoplay; fullscreen; picture-in-picture" title="Oakley - 2023 Maxine Fearlight Teaser"></iframe>
 <br>
 </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
