--- a/collapse-list.html
+++ b/collapse-list.html
@@ -4,7 +4,7 @@
 <title>
 Digital Flat File
 </title>
-  
+  <link rel="icon" type="image/x-icon" href="Links/home_page_index/Oakley_Logo.ico">
 <!-- (A) LOAD CSS & JS -->
     <link rel="stylesheet" href="./collapse-list.css">
     <script src="./collapse-list.js"></script>
