--- a/page_9.html
+++ b/page_9.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="icon" type="image/x-icon" href="Links/home_page_index/Oakley_Logo.ico">
 <style>
 a:link {
   color: #000000;
