--- a/page_12.html
+++ b/page_12.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+<link rel="icon" type="image/x-icon" href="Links/home_page_index/Oakley_Logo.ico">
 <!-- (A) LOAD CSS & JS -->
     <link rel="stylesheet" href="./collapse-list.css">
     <script src="collapse-list.js"></script>
