--- a/collapse-list.html
+++ b/collapse-list.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>
-Digital Flat File
+Future Genesis Digital Flat File
 </title>
   <link rel="icon" type="image/x-icon" href="Links/home_page_index/Oakley_Logo.ico">
 <!-- (A) LOAD CSS & JS -->
