--- a/page_1.html
+++ b/page_1.html
@@ -4,6 +4,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="Links/home_page_index/Oakley_Logo.ico">
+  <link rel="stylesheet" href="./collapse-list.css">
+    <script src="collapse-list.js"></script>
 <style>
 a:link {
   color: #000000;
@@ -105,5 +107,5 @@ padding-left: 55px;
 <br>
 <img src="./Links/Origin_Story/Max_Door_Image_Update.png" style="max-width:100%" /></a>
 <br>
-  <button class='backBtn' onclick="history.back(-1)"><p style="font-familty:Courier;">< Back </p></button>
+  <button class='backBtn' onclick="history.back(-1)">< Back</button>
 </body>
