--- a/page_6.html
+++ b/page_6.html
@@ -3,6 +3,8 @@
 
 <head>
   <link rel="icon" type="image/x-icon" href="Links/home_page_index/Oakley_Logo.ico">
+  <link rel="stylesheet" href="./collapse-list.css">
+    <script src="collapse-list.js"></script>
 <style>
 a:link {
   color: #000000;
