--- a/page_8.html
+++ b/page_8.html
@@ -46,7 +46,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:480px" />
-<img src="./Links/Lexicon/lexicon_oak_1.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_1.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
 <img src="./Links/Lexicon/lexicon_oak_2.jpg" style="max-width:100%" /></a>
 <br>
