--- a/page_12.html
+++ b/page_12.html
@@ -47,7 +47,7 @@ a:active {
     <div style="padding:55px;">
     <iframe width="600" height="338" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
-    <iframe src="https://player.vimeo.com/video/873778605?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" width="600" height="338" frameBorder="0" allow="autoplay; fullscreen; picture-in-picture" title="Oakley - 1992 Max Fearlight Ad _02"></iframe>
+    <iframe width="600" height="338" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
     </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
