--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-<title> Future Genesis Asset Archive </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title> Future Genesis Digital Flat File </title>
+      <link rel="stylesheet" href="./collapse-list.css">
+    <script src="collapse-list.js"></script>
 <style>
     
 a {
