--- a/homepage.html
+++ b/homepage.html
@@ -43,6 +43,6 @@ img{
 <img src="./Links/home_page_index/Home-Page_image_V2.jpg" style="padding:100px 0px  75px 0px;" />
 </div>
 <p style="text-align: center;">
-<a class="btn" href="collapse-list.html" class="center">- Enter Site -</a></p>
+<a class="btn" href="table_of_contents.html" class="center">- Enter Site -</a></p>
 <br>	
 </body>
